# safely-update-bear-mcp

./: .gitignore  README.md  package.json  pyproject.toml  requirements.txt  test_bear_client.py
docs/: README.md
src/: bear_client.py  database.py  mcp_server.py  web_server.py
src/templates/: error.html  history.html  index.html  preview.html  status.html
