[project]
name = "safely-update-bear-mcp"
version = "1.0.0"
description = "MCP Server for safe Bear note updates with preview workflow"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]==1.13.1",
    "fastapi==0.115.5",
    "uvicorn==0.32.1",
    "aiofiles==24.1.0",
    "python-multipart==0.0.12",
    "jinja2==3.1.4",
    "aiosqlite==0.20.0",
]
